# sf

./: .gitignore  FEATURE_add_card_notes.md  README.md  THE_PLAN.md  demo_8mm_passepartout.py  generate_a4.py  killservers.sh  main.py  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  quick_test.py  requirements.txt  tailwind.config.js  test-metadata.js  vercel.json
.cursor/rules/: general-programming.mdc
api/: config.py  dependencies.py  index.py  models.py  requirements.txt
api/core/: __init__.py  config.py  enums.py
api/models/: __init__.py  card.py  card_generation_models.py  request.py  response.py
api/routers/: __init__.py  card_generation.py  card_retrieval.py  color_suggestions.py  print_generation.py
api/services/: __init__.py  blob_service.py  supabase_service.py
api/utils/: __init__.py  ai_utils.py  card_utils.py  color_utils.py  common_utils.py  id_utils.py  image_processor.py  logger.py  models.py  openai_client.py  print_utils.py  response_formatter.py
app/: globals.css  layout.tsx
components/: CardDisplay.tsx  CardPreview.tsx  ColorTools.tsx  Footer.tsx  ImageCardDisplay.tsx  ImageUpload.tsx  WizardStep.tsx
docs/: HERO_CACHE_WORKFLOW.md
lib/: clipboardUtils.ts  colorUtils.ts  constants.ts  heroCardCache.ts  heroCardConfig.ts  shareUtils.ts
pages/: _document.tsx
scripts/: README.md  cache-hero-cards.js  download_generation.py  generate-hero-cache.js  generate_a4.py  generate_pdf.py
sql/: 01_card_generations.sql  02_add_card_notes_and_rename_images.sql  03_add_exif_location_data.sql  04_add_tiff_columns.sql
(+48 files in other folders)
